# me

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js
src/: app.rs  layout.rs  lib.rs  main.rs  state.rs
src/components/: error.rs  footer.rs  header.rs  mod.rs
src/route/: hireme.rs  home.rs  mod.rs
